Add repository link

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "jasonblanchard",
   "license": "ISC",
+  "repository": "github:jasonblanchard/jestbox",
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
