--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest --env node --config .jestrc.json",
     "build": "babel src -d lib",
-    "lint": "eslint src/ tests/"
+    "lint": "eslint src/ tests/",
+    "coveralls": "npm run test -- --coverage --coverageReporters=text-lcov | coveralls"
   },
   "author": "jasonblanchard",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "coveralls": "^3.0.2",
     "eslint": "^5.6.1",
     "eslint-config-semistandard": "^12.0.1",
     "eslint-config-standard": "^12.0.0",
