Add coverage commands

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest --env node --config .jestrc.json",
     "build": "babel src -d lib",
     "lint": "eslint src/ tests/",
-    "coveralls": "npm run test -- --coverage --coverageReporters=text-lcov | coveralls"
+    "coverage": "npm run test -- --coverage",
+    "coveralls": "npm run coverage --coverageReporters=text-lcov | coveralls"
   },
   "author": "jasonblanchard",
   "license": "ISC",
