--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "jest": "^23.6.0",
     "redux": "^4.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "peerDependencies": {
+    "redux": "^4.0.0"
+  }
 }
