--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "jsdoc-to-markdown": "^4.0.1",
     "redux": "^4.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "object-path": "^0.11.4",
+    "object-path-immutable": "^3.0.0"
+  },
   "peerDependencies": {
     "redux": "^4.0.0"
   }
