--- a/packages/redux-frame/package.json
+++ b/packages/redux-frame/package.json
@@ -15,8 +15,7 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-core": "^7.0.0-bridge.0",
-    "jsdoc-to-markdown": "^4.0.1",
-    "redux": "^4.0.0"
+    "jsdoc-to-markdown": "^4.0.1"
   },
   "dependencies": {
     "object-path": "^0.11.4",
