--- a/package.json
+++ b/package.json
@@ -1,44 +1,36 @@
 {
-  "name": "redux-frame",
-  "version": "0.0.6",
-  "description": "Yet another side-effect management library for Redux",
-  "main": "lib/index.js",
-  "scripts": {
-    "test": "jest --env node --config .jestrc.json",
-    "build": "babel src -d lib",
-    "lint": "eslint src/ tests/",
-    "coverage": "npm run test -- --coverage",
-    "coveralls": "npm run coverage -- --coverageReporters=text-lcov | coveralls",
-    "doc": "jsdoc2md -f src/*.js > docs/api.md"
-  },
-  "author": "jasonblanchard",
-  "license": "ISC",
-  "repository": "github:jasonblanchard/redux-frame",
+  "private": true,
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "coveralls": "^3.0.2",
-    "eslint": "^5.6.1",
+    "eslint": "^5.7.0",
+    "eslint-config-react-app": "^3.0.4",
     "eslint-config-semistandard": "^12.0.1",
     "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "^7.0.2",
+    "eslint-plugin-flowtype": "^3.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^23.6.0",
-    "jsdoc-to-markdown": "^4.0.1",
-    "redux": "^4.0.0"
+    "lerna": "^3.4.3",
+    "redux": "^4.0.1"
   },
-  "dependencies": {
-    "object-path": "^0.11.4",
-    "object-path-immutable": "^3.0.0"
-  },
-  "peerDependencies": {
-    "redux": "^4.0.0"
+  "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "build:all": "lerna run build",
+    "coverage": "npm run test -- --coverage",
+    "coveralls": "npm run coverage -- --coverageReporters=text-lcov | coveralls",
+    "doc": "lerna run doc",
+    "lerna": "lerna",
+    "lint": "eslint packages/**/src",
+    "publish": "lerna run build && lerna publish",
+    "test": "jest --env node --config .jestrc.json"
   }
 }
