--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "basic",
-  "version": "0.1.0",
+  "name": "example",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-frame": "^0.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "test": "react-scripts test"
   },
   "browserslist": [
     ">0.2%",
